<resources>
    <string name="app_name_baixa">BaixaMobile</string>

    <string name="activity_maps">Mapas</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>


    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>


    <!--ERROR-->
    <!--<string name="error_invalid_email">email inválido</string>-->
    <!--<string name="error_invalid_password">senha inválido</string>-->
    <string name="error_invalid_email_or_password">usuário ou senha inválido</string>

    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Esse campo é obrigatório</string>

    <!--LOGIN-->
    <string name="login_title_activity">Login</string>
    <string name="login_register_link">Cadastre-se</string>
    <string name="login_recovery_link">Esqueci Minha Senha</string>

    <!--CADASTRO-->
    <string name="register_title_activity">RegisterActivity</string>
    <string name="register_complete_name">Nome Completo</string>
    <string name="register_cpf">CPF</string>
    <string name="register_cnh">Registro da CNH</string>
    <string name="register_phone1">Telefone</string>
    <string name="register_phone2">Celular</string>
    <string name="register_email">E-mail</string>
    <string name="register_button">Cadastrar</string>

    <!--RECUPERAR-->
    <string name="recovery_title_activity">RecoveryActivity</string>
    <string name="recovery_email">Login de Recuperação</string>
    <string name="recovery_button">Enviar</string>

    <!--MENU DRAWER-->
    <string name="title_activity_menu_drawer">MenuDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_item_panel">Painel</string>
    <string name="navigation_drawer_item_pending">Pendentes</string>
    <string name="navigation_drawer_item_finished">Realizadas</string>
    <string name="navigation_drawer_config">Configuração</string>
    <string name="navigation_drawer_item_account">Minha Conta</string>
    <string name="navigation_drawer_item_exit">Sair</string>


    <!--MENU BAR-->
    <string name="action_settings">Settings</string>
    <string name="title_activity_panel_tabbed">PanelTabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_entrega">Finalizar Entrega</string>
    <string name="title_activity_foto_comprovante">Comprovante</string>


    <string-array name="tipo_recebedo">
        <item>O Proprio</item>
        <item>Pai</item>
        <item>Mãe</item>
        <item>Filho</item>
        <item>Porteiro</item>
        <item>Outro</item>
    </string-array>

    <string-array name="tipo_documento">
        <item>RG</item>
        <item>CPF</item>
        <item>CNH</item>
    </string-array>

    <string-array name="tipo_ocorrencia">
        <item>Destinatario Ausente</item>
        <item>Material não Localizado</item>
        <item>Coletado por Outra Transportadora</item>
        <item>Coleta Cancelada</item>
        <item>Local Fechado</item>
    </string-array>


    <string name="title_activity_assinatura_digital">Assinatura</string>
    <string name="title_activity_ocorrencia">Ocorrência</string>
    <string name="title_activity_entrega__acitivty">Finalizar Entrega</string>


    <!--<string name="baixa.entregue.erro.envio">Não foi possivel enviar</string>-->


</resources>
