<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/style_linearlayout"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".cadastro.CadastroActivity"
    tools:showIn="@layout/activity_register">





    <RelativeLayout
        android:id="@+id/title"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cadastre-se"
            android:textStyle="bold"
            android:textSize="25sp"
            />

        <TextView
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Seu pedido será enviado para a empresa e ficará pendente de análise."
            android:textSize="14sp"
            />

    </RelativeLayout>




    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/title"
        android:id="@+id/register_complete_name_inputlayout"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/register_complete_name_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_complete_name"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_cpf_inputlayout"
        android:layout_below="@+id/register_complete_name_inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--<com.github.pinball83.maskededittext.MaskedEditText-->
            <!--app:mask="***.***.***-**"-->
            <!--app:notMaskedSymbol="*"-->
            <!--android:id="@+id/register_cpf_id"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:maxEms="13"-->
            <!--android:hint="@string/register_cpf"-->
            <!--android:inputType="number"-->
            <!--android:maxLines="1"-->
            <!--android:imeOptions="actionNext"-->
            <!--android:singleLine="true" />-->
        <EditText
            android:id="@+id/register_cpf_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxEms="13"
            android:hint="@string/register_cpf"
            android:inputType="number"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_cnh_inputlayout"
        android:layout_below="@+id/register_cpf_inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--<com.github.pinball83.maskededittext.MaskedEditText-->
            <!--app:mask="***********"-->
            <!--app:notMaskedSymbol="*"-->
            <!--android:maxEms="11"-->
            <!--android:id="@+id/register_cnh_id"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/register_cnh"-->
            <!--android:inputType="number"-->
            <!--android:maxLines="1"-->
            <!--android:imeOptions="actionNext"-->
            <!--android:singleLine="true" />-->
        <EditText
            android:maxEms="11"
            android:id="@+id/register_cnh_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_cnh"
            android:inputType="number"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_phone1_inputlayout"
        android:layout_below="@+id/register_cnh_inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--<com.github.pinball83.maskededittext.MaskedEditText-->
            <!--app:mask="(**)****-****"-->
            <!--app:notMaskedSymbol="*"-->

            <!--android:id="@+id/register_phone1_id"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/register_phone1"-->
            <!--android:inputType="number"-->
            <!--android:maxLines="1"-->
            <!--android:imeOptions="actionNext"-->
            <!--android:singleLine="true" />-->
        <EditText
            android:id="@+id/register_phone1_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_phone1"
            android:inputType="number"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_phone2_inputlayout"
        android:layout_below="@+id/register_phone1_inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--<com.github.pinball83.maskededittext.MaskedEditText-->
            <!--app:mask="(**)*****-****"-->
            <!--app:notMaskedSymbol="*"-->

            <!--android:id="@+id/register_phone2_id"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/register_phone2"-->
            <!--android:inputType="number"-->
            <!--android:maxLines="1"-->
            <!--android:imeOptions="actionNext"-->
            <!--android:singleLine="true" />-->
        <EditText
            android:id="@+id/register_phone2_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_phone2"
            android:inputType="number"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_email_inputlayout"
        android:layout_below="@+id/register_phone2_inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/register_email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_below="@id/register_email_inputlayout"
        android:id="@+id/register_button"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:text="@string/register_button" />

</RelativeLayout>
